# envhero

./: .gitignore  AUTHORS.md  LICENSE  Makefile  README.md  app.py  envhero.py  envhero.schema.json  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  app.py
catalog/: __init__.py  catalog.py  from_aws_task_definition.py  from_env.py  scan.py  visitor.py
environment/: __init__.py  verify.py
src/envhero/: __init__.py  __main__.py
src/envhero/app/: app.py
src/envhero/catalog/: __init__.py  catalog.py  from_aws_task_definition.py  scan.py  visitor.py
src/envhero/environment/: __init__.py  verify.py
src/envhero/proxy/: vars.py
src/envhero/utils/: inject_proxy.py
tests/: test.json  test_main.py
tests/catalog/: test_catalog.py  test_scan.py
tests/environment/: test_verify.py
