[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "envhero"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruff",
    "rich",
]
authors = [
    {name = "Horacio Duran", email = "horacio.duran@shiphero.com"}
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/shiphero/envhero"

[project.scripts]
envhero = "envhero:main"

[tool.ruff]
line-length = 120


[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
