[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "envhero"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ruff",
    "rich",
    "boto3",
]
authors = [
    { name = "Horacio Duran", email = "horacio.duran@shiphero.com" }
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/shiphero/envhero"

[project.scripts]
envhero = "envhero:app.main"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
